# SMT

./: .gitignore  CHANGELOG.md  README.md  SAT.cabal  SMT-solver.cabal  SMT.cabal  flake.nix  shell.nix
.github/workflows/: haskell.yml
app/: Main.hs  Parser.hs  SMT2Parser.hs
minisat/: Dockerfile  docker-compose.yml
minisat/dimacs/: game-unequal.cnf  log  pigeon-hole-10.cnf  pigeon-hole-11.cnf  pigeon-hole-6.cnf  pigeon-hole-7.cnf  pigeon-hole-8.cnf  pigeon-hole-9.cnf
src/: Assignment.hs  CDCL.hs  CDCL2.hs  CLI.hs  CNF.hs  ConflictDrivenClauseLearning.hs  DPLL.hs  Expr.hs  Expression.hs  LinearResolution.hs  SAT.hs  Theory.hs  Utils.hs
src/Algorithm/: CDCL.hs  CDCL2.hs  DPLL.hs  LinearResolution.hs
src/SAT/: CDCL.hs  DPLL.hs
src/Theory/: BitVectors.hs  EagerUninterpretedFunctions.hs  LinearRealArithmatic.hs  NonLinearRealArithmatic.hs  Propositions.hs  UninterpretedFunctions.hs
src/Theory/LinearArithmatic/: BranchAndBound.hs  Constraint.hs  FourierMotzkin.hs  Simplex.hs
src/Theory/NonLinearRealArithmatic/: BoundedFloating.hs  CAD.hs  Constraint.hs  Expr.hs  Interval.hs  IntervalConstraintPropagation.hs  IntervalUnion.hs  Polynomial.hs  Subtropical.hs  UnivariatePolynomial.hs  VirtualSubstitution.hs
src/Theory/UninterpretedFunctions/: EDSL.hs  Eager.hs  Lazy.hs
test/: GameUnequal.hs  Test.hs  TestLinearArithmatic.hs  TestNonLinearRealArithmatic.hs  TestPropositions.hs  TestSAT.hs  TestUninterpretedFunctions.hs
