cabal-version:      2.4
name:               SMT
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me
extra-source-files: CHANGELOG.md

library
    exposed-modules:  CLI
                    , Expression
                    , Assignment
                    , CNF
                    , Algorithm.LinearResolution
                    , Algorithm.DPLL
                    -- , Algorithm.CDCL
                    , Algorithm.CDCL2
                    , Theory.BitVectors
                    , Theory.UninterpretedFunctions.Lazy
                    , Theory.UninterpretedFunctions.Eager
                    , Theory.LinearArithmatic.FourierMotzkin
                    , Theory.LinearArithmatic.Simplex
                    , Theory.LinearArithmatic.BranchAndBound
                    , Theory.NonLinearRealArithmatic.Expr
                    , Theory.NonLinearRealArithmatic.Interval
                    , Theory.NonLinearRealArithmatic.IntervalUnion
                    , Theory.NonLinearRealArithmatic.Polynomial
                    , Theory.NonLinearRealArithmatic.BoundedFloating
                    , Theory.NonLinearRealArithmatic.IntervalConstraintPropagation
                    -- , Theory.NonLinearRealArithmatic.Subtropical
                    , Theory.NonLinearRealArithmatic.VirtualSubstitution
                    , Theory.NonLinearRealArithmatic.CAD
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0
                    , megaparsec
                    , containers
                    , parser-combinators
                    , mtl
                    , extra
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables
                      , LambdaCase
                      , StrictData

test-suite test
    type:             exitcode-stdio-1.0 
    main-is:          Test.hs
    other-modules:    GameUnequal
                    , TestNonLinearRealArithmatic
    build-depends:    base ^>=4.14.3.0
                    , SMT
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , containers
    hs-source-dirs:   test
    default-language: Haskell2010
