cabal-version:      2.4
name:               SMT
version:            0.1.0.0
author:             Niklas Gruhn
maintainer:         niklas@gruhn.me
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Expression
                    , Assignment
                    , CNF
                    , SAT.DPLL
                    , SAT.CDCL
                    , Theory
                    , Theory.Propositions
                    , Theory.BitVectors
                    , Theory.UninterpretedFunctions.Lazy
                    , Theory.UninterpretedFunctions.Eager
                    , Theory.LinearArithmatic.Constraint
                    , Theory.LinearArithmatic.FourierMotzkin
                    , Theory.LinearArithmatic.Simplex
                    , Theory.LinearArithmatic.BranchAndBound
                    , Theory.NonLinearRealArithmatic.Expr
                    , Theory.NonLinearRealArithmatic.Interval
                    , Theory.NonLinearRealArithmatic.IntervalUnion
                    , Theory.NonLinearRealArithmatic.Polynomial
                    , Theory.NonLinearRealArithmatic.Constraint
                    , Theory.NonLinearRealArithmatic.BoundedFloating
                    , Theory.NonLinearRealArithmatic.IntervalConstraintPropagation
                    , Theory.NonLinearRealArithmatic.Subtropical
                    , Theory.NonLinearRealArithmatic.VirtualSubstitution
                    , Theory.NonLinearRealArithmatic.CAD
    other-modules:    Utils
    build-depends:    base
                    , megaparsec
                    , containers
                    , parser-combinators
                    , mtl
                    , extra
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: 
        ScopedTypeVariables
      , LambdaCase
      , StrictData
      , TupleSections
      , MultiParamTypeClasses
      , FunctionalDependencies 

test-suite test
    type:             exitcode-stdio-1.0 
    main-is:          Test.hs
    other-modules:    GameUnequal
                    , TestNonLinearRealArithmatic
                    , TestLinearArithmatic
                    , TestSAT
    build-depends:    base
                    , SMT
                    , hedgehog
                    , containers
    hs-source-dirs:   test
    default-language: Haskell2010
    default-extensions: StrictData
                      , ScopedTypeVariables
